<resources>
    <string name="app_name">MyTelegram</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_name">Кир Ожигин</string>
    <string name="user_number">+7(931)5894868</string>
    <string name="new_group">Создать группу</string>
    <string name="contacts">Контакты</string>
    <string name="calls">Звонки</string>
    <string name="saved">Сохраненное</string>
    <string name="settings">Настройки</string>
    <string name="add_user">Пригласить друзей</string>
    <string name="telegram_opportunities">Возможности Telegram</string>
    <string name="nearby_people">Люди рядом</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_nearby_people">Люди рядом</string>
    <string name="menu_saved">Сохраненное</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_invite_friends">Пригласить друзей</string>
    <string name="menu_telegram_opportunities">Возможности телеграма</string>
    <string name="menu_contacts">Контакты</string>
    <string name="menu_calls">Звонки</string>

    <string name = "monolog">...Молчи, Соня, я совсем не смеюсь, я ведь и сам знаю, что меня черт тащил. Молчи, Соня, молчи! – повторил он мрачно и настойчиво. – Я всё знаю. Всё это я уже передумал и перешептал себе, когда лежал тогда в темноте… Всё это я сам с собой переспорил, до последней малейшей черты, и всё знаю, всё! И так надоела, так надоела мне тогда вся эта болтовня! Я всё хотел забыть и вновь начать, Соня, и перестать болтать! И неужели ты думаешь, что я как дурак пошел, очертя голову? Я пошел как умник, и это-то меня и сгубило! И неужель ты думаешь, что я не знал, например, хоть того, что если уж начал я себя спрашивать и допрашивать: имею ль я право власть иметь? – то, стало быть, не имею права власть иметь. Или что если задаю вопрос: вошь ли человек? – то, стало быть, уж не вошь человек для меня, а вошь для того, кому этого и в голову не заходит и кто прямо без вопросов идет… Уж если я столько дней промучился: пошел ли бы Наполеон или нет? – так ведь уж ясно чувствовал, что я не Наполеон… Всю, всю муку всей этой болтовни я выдержал, Соня, и всю ее с плеч стряхнуть пожелал: я захотел, Соня, убить без казуистики, убить для себя, для себя одного! Я лгать не хотел в этом даже себе! Не для того, чтобы матери помочь, я убил – вздор! Не для того я убил, чтобы, получив средства и власть, сделаться благодетелем человечества. Вздор! Я просто убил; для себя убил, для себя одного: а там стал ли бы я чьим-нибудь благодетелем или всю жизнь, как паук, ловил бы всех в паутину и из всех живые соки высасывал, мне, в ту минуту, всё равно должно было быть!.. И не деньги, главное, нужны мне были, Соня, когда я убил; не столько деньги нужны были, как другое… Я это всё теперь знаю… Пойми меня: может быть, тою же дорогой идя, я уже никогда более не повторил бы убийства. Мне другое надо было узнать, другое толкало меня под руки: мне надо было узнать тогда, и поскорей узнать, вошь ли я, как все, или человек? Смогу ли я переступить или не смогу! Осмелюсь ли нагнуться и взять или нет? Тварь ли я дрожащая или право имею…</string>
</resources>